--- a/css/style.css
+++ b/css/style.css
@@ -87,10 +87,26 @@ a {
 h1 {
     font-family: Merriweather, serif;
     font-weight: 700;
+    margin-left: 10px;
 }
 
 .h-text {
     font-size: 18px;
     font-family: "Open Sans", sans-serif;
     color: rgba(0, 0, 0, 0.8);
+}
+
+.line {
+    height: 4px;
+    width: 80px;
+    background-color: #003645;
+    margin-left: 0.5rem;
+    margin-bottom: 1rem;
+
+}
+
+.ABt-C {
+    font-size: 12px;
+    color: #656565;
+    font-weight: 400;
 }
